# start-compilers

./: .gitignore  CMakeLists.txt  Dockerfile  build.py  compiler.c  deploy.py  doc.doc  index.html  install.py  pgt.cpp  test.txt
src/: Ast.h  CodeGen.cpp  CodeGen.h  Error.h  GarbageCollector.cpp  GarbageCollector.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  PackageResolver.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SyntaxHealer.h  Token.h  Utils.cpp  Utils.h  main.cpp
src/code/: CodeGen.cpp  GarbageCollector.cpp
src/compilers/: Interpreter.cpp  Parser.cpp  SemanticAnalyzer.cpp
src/include/init/: ProjectInit.h
src/include/interpreter/: Interpreter.h
src/include/lexer/: Lexer.h
src/include/package/: PackageResolver.h
src/include/parser/: Parser.h
src/include/runtime/: gc.h
src/include/semantic/: SemanticAnalyzer.h  SyntaxHealer.h
src/include/token/: Ast.h  Token.h
src/include/utils/: CodeGen.h  Error.h  GarbageCollector.h  Utils.h
src/init/: ProjectInit.cpp  ProjectInit.h
src/lexer/: Lexer.cpp
src/runtime/: gc.h
src/utils/: Utils.cpp
